objects/project_cloud__Time_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>project_cloud__Automatically_Approve_Time_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should Time Entries be Submitted for approval as soon as they are created?</description>
        <label>Automatically Submit Time Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Grace_After_Completed__c</fullName>
        <defaultValue>14</defaultValue>
        <inlineHelpText>The number of days after a Project Task has closed before it is no longer available on the Timecard. If no value is specified a default value of 14 days is used</inlineHelpText>
        <label>Grace Period - Completed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Grace_Before_Start__c</fullName>
        <inlineHelpText>The number of days before a Project Task starts when it is available on the Timecard. 0 is always show. The default value is 0.</inlineHelpText>
        <label>Grace Period - Start Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Create_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the Create Time Entry button be included on the timecard</description>
        <label>Hide Create Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Daily_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Daily Assistant from Timecard</description>
        <inlineHelpText>Selecting this check-box will hide the daily assistant tab from the timecard</inlineHelpText>
        <label>Hide the daily assistant tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Project_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Project Assistant from Timecard</description>
        <inlineHelpText>Selecting this check-box will hide the project assistant tab from the timecard</inlineHelpText>
        <label>Hide the project assistant tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hide_Weekly_Assistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Weekly Assistant from Timecard</description>
        <inlineHelpText>Selecting this check-box will hide the weekly assistant tab from the timecard</inlineHelpText>
        <label>Hide the weekly assistant tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Show_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the Submit for Approval Related List be included on the timecard</description>
        <label>Show Submit For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_Allocations__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should Calendar Allocations be included in the timecard genius suggestions</description>
        <label>Suggest Allocations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should Chatter comments be used to populate the suggested time entries section</description>
        <inlineHelpText>Selecting this check-box will show any records a user has added chatter comments to, in the users Timecard Genius</inlineHelpText>
        <label>Suggest Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_Columns__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>The maximum number of columns that can be displayed in the Timecard Genius</inlineHelpText>
        <label>Suggest Columns</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should Events be used to populate the suggested time entries section</description>
        <inlineHelpText>Selecting this check-box will show any records a user has a Salesforce event tied to, in the users Timecard Genius</inlineHelpText>
        <label>Suggest Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_History_Tracking__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should Field History Tracking changes be used to populate the suggested time entries section</description>
        <inlineHelpText>Selecting this check-box will show any records a user has modified where the field is tracked in field history tracking, in the users Timecard Genius</inlineHelpText>
        <label>Suggest Field History Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_Include_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should suggested entries be shown for records that already have a time entry?</description>
        <inlineHelpText>Selecting this check-box will show any records returned by the Timecard Genius regardless of if there is already a time entry for the week for the same record. (It is recommended to leave this check-box unchecked).</inlineHelpText>
        <label>Suggest Include Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_Notes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should notes be used to populate the suggested time entries section</description>
        <inlineHelpText>Selecting this check-box will show any records a user has added a note to, in the users Timecard Genius</inlineHelpText>
        <label>Suggest Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Suggest_Tasks__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should Tasks be used to populate the suggested time entries section</description>
        <inlineHelpText>Selecting this check-box will show any records a user has a Salesforce Task attached to, in the users Timecard Genius</inlineHelpText>
        <label>Suggest Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Time_Entry_Visibility_Case__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Time Entry for Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Time_Entry_Visibility_Project_Phase__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Time Entry for Project Phases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Time_Entry_Visibility_Project_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Time Entry for Project Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Time_Entry_Visibility_Project__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Time Entry for Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Time_Entry_Visibility_Ticket__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Time Entry for Tickets</label>
        <type>Checkbox</type>
    </fields>
    <label>Time Options</label>
</CustomObject>